--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": false,
   "dependencies": {
     "@ai-sdk/provider": "^1.1.3",
-    "@ai-sdk/provider-utils": "^2.2.7"
+    "@ai-sdk/provider-utils": "^2.2.7",
+    "biome": "^0.3.3"
   }
 }
