--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
     "include": ["./src"],
     "exclude": ["*/dist", "dist", "build", "node_modules"],
     "compilerOptions": {
-        "lib": ["ES2021"],
-        "module": "commonjs",
+        "module": "ESNext",
         "moduleResolution": "node",
         "noEmitOnError": true,
         "noImplicitReturns": true,
@@ -11,6 +10,6 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "sourceMap": false,
-        "target": "ES2021"
+        "lib": ["ESNext", "DOM"],
     }
 }
