--- a/package.json
+++ b/package.json
@@ -5,9 +5,51 @@
   "author": "praneethpike",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "tsup ./index.ts --out-dir dist",
+    "clean": "rm -rf dist && rm -rf internal/dist",
+    "dev": "tsup ./index.ts --watch",
+    "lint": "biome check src",
+    "typecheck": "tsc --noEmit",
+    "prepublish": "yarn run build",
+    "format": "biome format src",
+    "test": "yarn run test:node && yarn run test:edge",
+    "test:node": "vitest --config vitest.node.config.ts",
+    "test:edge": "vitest --config vitest.edge.config.ts"
+  },
   "dependencies": {
     "@ai-sdk/provider": "^1.1.3",
     "@ai-sdk/provider-utils": "^2.2.7",
     "biome": "^0.3.3"
-  }
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.1",
+    "ai": "^4.3.7",
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.1",
+    "zod": "^3.24.2"
+  },
+  "peerDependencies": {
+    "zod": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "homepage": "https://github.com/praneethpike/straico-ai-sdk-provider",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/praneethpike/straico-ai-sdk-provider.git"
+  },
+  "keywords": [
+    "straico",
+    "ai",
+    "sdk",
+    "provider"
+  ],
+  "packageManager": "yarn@1.22.19"
 }
