--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   },
   "dependencies": {
     "@ai-sdk/provider": "^1.1.3",
-    "@ai-sdk/provider-utils": "^2.2.7",
-    "biome": "^0.3.3"
+    "@ai-sdk/provider-utils": "^2.2.7"
   },
   "devDependencies": {
     "@edge-runtime/vm": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
     "ai": "^4.3.7",
+    "biome": "^0.3.3",
     "tsup": "^8.4.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.1",
