--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "straico-ai-sdk-provider",
-  "version": "1.1.0-beta",
+  "version": "1.1.0-beta.1",
   "main": "dist/index.js",
   "types": "index.ts",
   "author": "praneethpike",
